<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/notice_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <ImageView
            android:id="@+id/full_image_preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:srcCompat="@color/colorPrimaryDark"
            android:contentDescription="@string/desc" />

        <TextView
            android:id="@+id/title_full_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="#131313"
            android:padding="10dp"
            android:text="@string/titulo" />

        <TextView
            android:id="@+id/subtitle_full_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="10dp"
            android:text="@string/subtitulo_de_es" />

        <TextView
            android:id="@+id/date_full_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingLeft="8dp"
            android:textStyle="italic"
            android:text="@string/deffault_date" />

        <TextView
            android:id="@+id/category_full_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingLeft="8dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="7dp"
            android:text="@string/category" />

        <TextView
            android:id="@+id/desc_full_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generic_content"
            android:textSize="16sp"
            android:padding="8dp"/>
    </LinearLayout>

</ScrollView>