<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="7dp">

    <ImageView
        android:id="@+id/img_preview"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:maxHeight="100dp"
        android:maxWidth="100dp"
        android:adjustViewBounds="true"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        app:srcCompat="@android:color/holo_red_dark"
        android:contentDescription="@string/content_desc_preview" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="2.5"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/title_preview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/titulo"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:paddingLeft="5dp"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/subtitle_preview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:paddingLeft="5dp"
            android:maxLines="3"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:text="@string/subtitle_preview" />
    </LinearLayout>
</LinearLayout>